# -simplified-RNN-architectures

./: .gitignore  dataset.py  main.py  main_unstable.py  min_ops.py  mingru.py  minlstm.py  pydantic_models.py  pyproject.toml  tokens.json  trainer.py
experiments/: 00-widen-embeddings.toml  01-search-learning-rate.toml  02-add-dropout.toml  03-trade-epochs-for-data.toml  04-good-wiki-dataset.toml  05-more-data-less-epochs.toml  06-even-more-data-less-epochs.toml  07-more-data-more-epochs.toml  08-larger-batch-size.toml  09-smaller-sequence-length.toml  10-raise-lr.toml  11-more-data.toml  12-larger-batch.toml  13-more-data.toml  14-more-data.toml  15-groups-smaller.toml  16-entropy.toml  17-from-14-reduce-embed-size.toml  18-from-17-stack-higher.toml  19-less-data.toml
mingru/: dataset.py  lm.py  main.py  mingru.py  minlstm.py  pydantic_models.py  tokenizer.py  trainer.py
