[project]
name = "mingru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.3",
    "polars>=1.9.0",
    "pydantic>=2.7.4",
    "tomlkit>=0.13.2",
    "torch>=2.5.0",
    "tqdm>=4.64.1",
    "transformers>=4.45.2",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/rocm6.2"]
